 34. Smoke Rings is now recipe driven, and players can select their ring style. 
 35. *Emoters props and behaviors now support PUFF emotes and some other features.
 36. New Scriptable triggers: WEARING_PROG, RIDE_PROG, RIDING_PROG
 37. Room varies now supports varying the room description by entry direction.
 38. New Archon skill: LLMIFY, for making LLM-powered mobs, if you can.
 39. GenCraftingSkill now supports a fire requirement.
 40. New Endow Gemstones and Jewelry recipes, Poisons list expanded.
 41. New large rideables: GenAirShip, GenBalloon
 42, AHELP can now be used by archons to get help on MP commands.
 43. Falling items can now hit and damage mobs below them, or boardables.
 44. Email Command now uses the message maker for longer messages.
 45. Many more editors now support the Siplet.Input pop-up box.
 46. GMCP now supports exit open/locked status
 47. Prop_LimitedEquip will now also act as Limited Get if flagged as such.
 48. Most objects can be TAGged for enhanced zapper-masking, MQL querying, GMODIFY, WHERE, and in scripts.
 49. Scriptable: FOR-NEXT can now loop over lists MQL query results, and tagged objects.
 50. The entire MUDGrinder and web system uses cookie-based auth now, and forum reads use GET instead of POST.
 51. When MXP is enabled, MUD will now wrap httpx:// urls into anchors for the client.

# Build 5.10.5 Release 07/12/2025
  *  DATABASE CHANGED! (new CMCDAC table)
  1. New Generic Commands!, see GameBuildersGuide for more information.
  2. BodyPiercing is now recipe driven, and recipes are now split off by level.
  3. New Skill: Diary
  4. ColorSet now supports Exits, as well as explored/unexplored doors.
  5. Mudborn kids get Prop_SafePet with auto-leiging and auto-follow
  6. New prompt features: %h% %m% and %v% for percentages .. breaks MXP bars
  7. New disable flags: CHARCRSTAT, CHARCRRACE, CHARCRCLASS, CHARCRGENDER
  8. New archon LISTs: DEBUGFLAGS, DISABLEFLAGS